[FEATURE] Logging support and fixes
This adds some logging for important actions
in the service and fixes a bug in combination
with FLOW3 1.1 which let the virtual browser
send wrong POST arguments to the Akismet
service.

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -1,5 +1,13 @@
 RobertLemke:
   Akismet:
+
+    # Defines the host of the Akismet service. Does not have to be changed unless
+    # Akismet changes its service entry point.
     serviceHost: 'rest.akismet.com'
+
+    # The API key you have been provided by Akismet
     apiKey: ''
+
+    # The frontpage URI pointing to your blog or the site using Akismet. Must be
+    # a full URI, for example "http://robertlemke.com/blog".
     blogUri: ''
