--- a/Configuration/Objects.yaml
+++ b/Configuration/Objects.yaml
@@ -1,4 +1,4 @@
 RobertLemke\Akismet\Service:
   properties:
     browserRequestEngine:
-      object: 'TYPO3\FLOW3\Http\Client\CurlRequestEngine'
+      object: 'TYPO3\FLOW3\Http\Client\CurlEngine'
