--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "robertlemke/akismet",
-    "type": "typo3-flow-package",
+    "type": "typo3-flow-plugin",
     "description": "Akismet plugin for TYPO3 Flow applications",
     "homepage": "https://github.com/robertlemke/RobertLemke.Akismet",
     "keywords": ["plugin"],
@@ -18,7 +18,7 @@
     },
     "autoload": {
         "psr-0": {
-            "TYPO3\\Flow": "Classes"
+            "RobertLemke\\Akismet": "Classes"
         }
     }
 }
