[TASK] Fixed version number and package type
Change-Id: I7f3fc2d0035b3ac39c6faa04a6eefcd6d93b9242

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "robertlemke/akismet",
-    "type": "typo3-flow-plugins",
+    "type": "typo3-flow-plugin",
     "description": "Integration of Akismet, an intelligent comment spam detector, for FLOW3",
-    "version": "1.0.1",
+    "version": "1.1.0",
     "require": {
         "typo3/flow": "*"
     },
