--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "robertlemke/akismet",
     "type": "typo3-flow-plugin",
-    "description": "Integration of Akismet, an intelligent comment spam detector, for FLOW3",
+    "description": "Integration of Akismet, an intelligent comment spam detector, for TYPO3 Flow",
     "version": "1.1.0",
     "require": {
         "typo3/flow": "*"
