--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "type": "typo3-flow-plugin",
     "description": "Integration of Akismet, an intelligent comment spam detector, for TYPO3 Flow",
     "version": "1.1.0",
+    "license": ["MIT"],
     "require": {
         "typo3/flow": "*"
     },
