--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "neos/flow": "~4.0"
+        "neos/flow": "^4.0 || ^5.0"
     },
     "autoload": {
         "psr-4": {
