--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "neos/flow": "^6.0 || ^7.0"
+        "neos/flow": "^6.3 || ^7.0 || ^8.0"
     },
     "autoload": {
         "psr-4": {
